-- 0.9 --
* bugfix: fix downloading youtube from cli
* bugfix: fix tmd-viewer file-chooser not offering all tmd-files
* update: added new youtube channel versions
* update: show deactivation info for disabled services channels
* new: add skyward sword savegame fix
* new: add lovefilm channel
* new: add wii u transfer channel
* new: add photo channel 1.1b

-- 0.8 --
* bugfix: fix relative paths for -d/--download cli on linux
* bugfix: fix downloading without packgin for -d/--download cli
* bugfix: titleid for US WiiSpeak has been the PAL version
* update link to pycrypto installer for Windows in 'DEPS'
* only chdir on linux (not working for some on windows(?))
* added support for downloading YouTube channel

-- 0.7 --
* cli-options now can properly handle relative paths
* --tmdinfo does now longer fail when checking an IOS
* don't enforce decrypt=false on unpacking cli
* automatic whitespace fixes

-- 0.6 --
* fixed a string in german translation
* fixed selecting file in TMD-Viewer
* fixed show ascii id of title in TMD-Viewer
* only install qm-files for translation, not ts-files aswell
* changed default directory to $HOME (so that file-selectors
  don't start at Qwads source or installation directory)
* added command line options (see CLI file)

-- 0.5a --
* correctly show version of IOS62
* fix downloading shop channel

-- 0.5 --
* add debian packaging scripts
* install translations
* remove some unused WiiPy stuff, Qwad now runs fine on Python3
* added IOS62 and Shop v21
* fixed a bug in Makefile, improved clean rule
* added german translation (99%)
* new icon from NeoRame

-- 0.4 --
* add new IOS to downloader
* show available versions of selected IOS in downloader
* downloading channels is currently not possible
* logical sorting of IOS in downloader (IOS4 is the first, not after IOS39)
  taken from: [http://code.activestate.com/recipes/135435/]
* ensure Python 2.x is used, Python 3.x is not yet supported