@@ -106,6 +106,7 @@ ChannelCLIDict = {
 "everyonevotes":"Everyone Votes",
 "jamwiththeband":"Jam With The Band",
 "japanfoodservice":"Japan Food Service",
+"kirbytv":"Kirby TV",
 "lovefilm":"Lovefilm",
 "mii":"Mii Channel",
 "news":"News",
@@ -113,6 +114,7 @@ ChannelCLIDict = {
 "opera":"Opera",
 "photo":"Photo",
 "photo11":"Photo 1.1",
+"photo11b":"Photo 1.1b",
 "regionselect":"Region Select",
 "shashin":"Shashin Channel",
 "skyward":"Skyward Sword Fix",
@@ -135,6 +137,7 @@ ChannelJAPDict = {
 "Everyone Votes":"0001000148414A4A",
 "Jam With The Band":"000100014843414A",
 "Japan Food Service":"000100084843434A",
+"Kirby TV":"0001000148434D4A",
 "Mii Channel":"0001000248414341",
 "News":"0001000248414741",
 "Nintendo":"000100014841544A",
@@ -165,6 +168,7 @@ ChannelJAPVerDict = {
 "Everyone Votes":"latest\n***deactivated since Jun 2013***",
 "Japan Food Service":"latest",
 "Jam With The Band":"latest",
+"Kirby TV":"latest",
 "Mii Channel":"2, 3, 4, 5, 6",
 "News":"3, 6, 7\n***deactivated since Jun 2013***",
 "Nintendo":"latest\n***deactivated since Jun 2013***",
@@ -193,6 +197,7 @@ ChannelPALDict = {
 "EULA":"0001000848414B50",
 "Everyone Votes":"0001000148414A50",
 "Jam With The Band":"0001000148434150",
+"Kirby TV":"0001000148434D50",
 "Lovefilm":"0001000148435750",
 "Mii Channel":"0001000248414341",
 "News":"0001000248414741",
@@ -220,6 +225,7 @@ ChannelPALVerDict = {
 "EULA":"1, 2, 3",
 "Everyone Votes":"latest\n***deactivated since Jun 2013***",
 "Jam With The Band":"latest",
+"Kirby TV":"2",
 "Lovefilm":"258",
 "Mii Channel":"2, 3, 4, 5, 6",
 "News":"3, 6, 7\n***deactivated since Jun 2013***",
@@ -245,6 +251,7 @@ ChannelUSADict = {
 "EULA":"0001000848414B45",
 "Everyone Votes":"0001000148414A45",
 "Jam With The Band":"0001000148434145",
+"Kirby TV":"0001000148434D45",
 "Lovefilm":"0001000148435745",
 "Mii Channel":"0001000248414341",
 "News":"0001000248414741",
@@ -271,6 +278,7 @@ ChannelUSAVerDict = {
 "EULA":"1, 2, 3",
 "Everyone Votes":"latest\n***deactivated since Jun 2013***",
 "Jam With The Band":"latest",
+"Kirby TV":"latest",
 "Lovefilm":"latest",
 "Mii Channel":"2, 3, 4, 5, 6",
 "News":"3, 6, 7\n***deactivated since Jun 2013***",
