@@ -7,6 +7,7 @@
 * new: add lovefilm channel
 * new: add wii u transfer channel
 * new: add photo channel 1.1b
+* new: add kirby channel (for completelyness)
 
 -- 0.8 --
 * bugfix: fix relative paths for -d/--download cli on linux
